# fwdprop

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
fwdprop/: __init__.py  core.py
